<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="dialog_cancel_button">取消</string>
    <string name="dialog_no_button">否</string>
    <string name="dialog_ok_button">确定</string>
    <string name="dialog_yes_button">是</string>
    <string name="inputkb">按键精灵输入法</string>
    <string name="toast_cloud_root_failed">临时root不通过</string>
    <string name="toast_cloud_root_success">临时root通过</string>
    <string name="toast_engine_crash_then_restart">脚本异常终止</string>
    <string name="toast_engine_no_permission">没有权限</string>
    <string name="toast_failed_got_root">%s 没有获得root权限</string>
    <string name="toast_on_start_script">开始运行</string>
    <string name="toast_on_stop_script">停止运行</string>
    <string name="toast_run_failed">运行异常(%d)</string>
    <string name="toast_script_already_running">已经有脚本在运行中...</string>
    <string name="toast_script_engine_failed_start">脚本运行环境初始化失败</string>
    <string name="toast_starting_script_engine">正在初始化脚本运行环境</string>
    <string name="ui_show_invalid_color_value">无效的颜色值</string>
    <string name="ui_show_negative_button_label">退出</string>
    <string name="ui_show_not_found_float">没有找到 ID为 “%s” 的悬浮窗</string>
    <string name="ui_show_not_found_ui">没有找到 ID为 “%s” 的界面</string>
    <string name="ui_show_not_found_widget">没有找到 ID为 “%s” 的控件</string>
    <string name="ui_show_positive_button_label">继续</string>
    <string name="No_ScriptLog">暂无脚本日志</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMUpdateCheck">2.4.1.20140228</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="aa">@string/ad_delete_btn</string>
    <string name="aabbcc">aabbcc</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abgame_down_count">%s次下载</string>
    <string name="abgame_down_size">下载 ( %s )</string>
    <string name="action_settings">Settings</string>
    <string name="activation_code">注册码激活</string>
    <string name="activation_code_suc">注册码激活成功</string>
    <string name="activation_registration">激活注册码</string>
    <string name="ad_delete_btn">点击关闭 | %d 秒</string>
    <string name="ad_source_mark">%s广告</string>
    <string name="all_photo_mobile">所有的图片</string>
    <string name="already_bind_project_number">已绑定的项目编号</string>
    <string name="already_binding">已绑定</string>
    <string name="apk_generate_time">2019-08-21 16:00</string>
    <string name="apk_size">%1$sMB</string>
    <string name="app_download_ing">正在下载中，请稍等...</string>
    <string name="app_downloading">下载中</string>
    <string name="app_getroot">小精灵已获得ROOT权限</string>
    <string name="app_install">安装</string>
    <string name="app_loading">加载中...</string>
    <string name="app_menu_exit">退出</string>
    <string name="app_name">红警OL辅助-小精灵</string>
    <string name="app_open">启动</string>
    <string name="app_resolution">720*1184;720*1280</string>
    <string name="app_template_type">免费</string>
    <string name="app_ungetroot">小精灵未获得ROOT权限</string>
    <string name="app_update_tips">加入天恩广告，脚本运行浮窗修改</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_environment_init_finish">应用环境初始化完成！</string>
    <string name="application_in_launching">正在启动应用</string>
    <string name="application_in_loading">应用加载中</string>
    <string name="bind_enterprise_project">绑定企业版项目</string>
    <string name="binding">绑定</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_down">开始下载</string>
    <string name="btn_ok">确定</string>
    <string name="btn_refresh">刷新</string>
    <string name="btn_sure">确定(%1$d)</string>
    <string name="camera_permission_prompt">需要拍照权限。\n设置路径：设置-&gt;应用-&gt;应用名称-&gt;权限</string>
    <string name="cancel">取消</string>
    <string name="change">更换</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_heartbeat_failed">心跳校验失败</string>
    <string name="check_sign_fail">服务器验证异常</string>
    <string name="clear_msg">清空消息</string>
    <string name="commit_data_error">提交数据失败,请检查网络！</string>
    <string name="commit_data_running">正在提交数据，您可能需要等一会</string>
    <string name="commit_feedback_info">提交反馈</string>
    <string name="common_button_cancel">取消</string>
    <string name="common_button_confirm">确定</string>
    <string name="common_tips">提示</string>
    <string name="countdown_time">%d 跳过</string>
    <string name="cpu_core_eight">八核</string>
    <string name="cpu_core_four">四核</string>
    <string name="cpu_core_one">单核</string>
    <string name="cpu_core_sixteen">十六核</string>
    <string name="cpu_core_three">三核</string>
    <string name="cpu_core_two">双核</string>
    <string name="create_new_file">新建文件夹</string>
    <string name="default_content">####################</string>
    <string name="deletefloatview_delete">拖到此处隐藏</string>
    <string name="description_description">脚本说明</string>
    <string name="device_name">设备名称</string>
    <string name="devices_info">设备信息</string>
    <string name="devices_is_root">root权限：%1$s</string>
    <string name="devices_name">机型：%1$s</string>
    <string name="devices_no_root">没有root</string>
    <string name="devices_use_system">系统：%1$s</string>
    <string name="devices_yes_root">已root</string>
    <string name="dialog_reset">重试</string>
    <string name="dialog_setting">设置</string>
    <string name="down_apk_tips">是否同意下载“%1$s”?</string>
    <string name="download">下载</string>
    <string name="download_error">下载出错</string>
    <string name="download_go_on">继续</string>
    <string name="download_prompt">更多免费脚本尽在游戏蜂窝</string>
    <string name="download_ratio_total">%1$s/%2$s</string>
    <string name="download_start">开始下载!请注意顶部状态栏!</string>
    <string name="edit_device_name_hint">输入设备名称</string>
    <string name="edit_device_name_title">设备名称</string>
    <string name="edit_project_number_hint">--------</string>
    <string name="edit_project_number_title">项目编号</string>
    <string name="elfin_appid">238076</string>
    <string name="elfin_appinfo">COBC41DkB9vuJuuZA5T2+hSJXVrM5/DJs+cvCsW89UbcEuqeEcx8Zfdll5w5Ed04e/JnVcOeO4XHospe1u9wgu+IpdsPqHj6</string>
    <string name="elfin_script_type">1686949188</string>
    <string name="empty">该辅助暂无设置相关注册码购买信息</string>
    <string name="empty_string" />
    <string name="environment_init_failure">环境初始化失败！</string>
    <string name="error_qq_tel">qq号/手机号格式错误</string>
    <string name="et_feedback_info_hint">用起来不顺心？想要吐槽！提出宝贵意见！ 那就提出来并留下联系方式等我们CALL你吧！</string>
    <string name="exit_app">退出</string>
    <string name="feedback">用户反馈</string>
    <string name="feedback_browse">反馈预览</string>
    <string name="feedback_btn_back">返回</string>
    <string name="feedback_btn_commit">提交</string>
    <string name="feedback_info_title">用户反馈</string>
    <string name="feedback_num_hint">已输入%1$d字(300字以内)</string>
    <string name="feedback_problem_des">问题描述：</string>
    <string name="floatview_dialog_scriptinfo_btn_OK">确定</string>
    <string name="floatview_elfin_games">特权游戏</string>
    <string name="floatview_elfin_info">说明</string>
    <string name="floatview_elfin_pause">暂停</string>
    <string name="floatview_elfin_run">启动</string>
    <string name="floatview_elfin_setting">设置</string>
    <string name="floatview_elfin_stop">停止</string>
    <string name="floatview_noinfo">该脚本暂无说明</string>
    <string name="formal_complaints_qq">投诉请加官方QQ：2719545886</string>
    <string name="free_root_dialog_tips">获取root权限失败，请先开启root权限后再启动，或者点击下方免root启动按钮进行启动！</string>
    <string name="free_root_launch">免root启动</string>
    <string name="free_root_loading_dialog_tips">加载中，请耐心等待</string>
    <string name="hidefw_cancel">取消</string>
    <string name="hidefw_ok">确定</string>
    <string name="hidefw_tip_content">隐藏浮窗后可通过启动功能呼出</string>
    <string name="hidefw_tip_title">隐藏浮窗</string>
    <string name="i_known">我知道了</string>
    <string name="image_add">添加图片(最多上传%1$d/4张)</string>
    <string name="img_content_too_large">选择的图片超过2兆，请您重新选择</string>
    <string name="img_count_more">对不起，只允许选择4张图片</string>
    <string name="img_num_limit">已上传%1$d张，还能再上传%2$d张</string>
    <string name="img_num_rember">传递的图片数量已超过最大的张数,只允许传4张。</string>
    <string name="img_select_title">相册</string>
    <string name="input_register_number">请输入注册码编号</string>
    <string name="install_honeycomb">安装游戏蜂窝</string>
    <string name="invalid_url_address">无效的URL地址</string>
    <string name="is_net_open">当前网络不可用，请检查网络!</string>
    <string name="jdeferred">jdeferred</string>
    <string name="json_data_null">getData下发json数据为null</string>
    <string name="json_parse_exception">json解析数据异常</string>
    <string name="launch">启动</string>
    <string name="scriptui_exitapp">退出应用</string>
    <string name="setting_call_stop">来电时停止运行脚本</string>
    <string name="setting_floatview_ctrl">虚拟浮窗控制脚本</string>
    <string name="setting_open_run_script">开机启动脚本</string>
    <string name="setting_scriptlog">脚本日志</string>
    <string name="setting_update">检测更新</string>
    <string name="setting_vibration">启停脚本时震动</string>
    <string name="setting_volume_key_ctrl">音量增减控制脚本</string>
    <string name="setting_waggle_stop">启动摇一摇停止脚本</string>
    <string name="word_recognition_library">文字识别库</string>
</resources>