<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_white_notranslucent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/setting_dialog_imageview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setting_arrow_left"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gray2"
            android:gravity="center"
            android:id="@+id/textView1"
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/floatview_elfin_setting"
            android:layout_weight="1"/>
        <ImageView
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setting_arrow_left"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Switch
                android:id="@+id/setting_swtich_volume_key_ctrl"
                android:text="@string/setting_volume_key_ctrl"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/setting_swtich_floatview_ctrl"
                android:text="@string/setting_floatview_ctrl"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/setting_swtich_waggle_stop"
                android:text="@string/setting_waggle_stop"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/setting_swtich_call_stop"
                android:text="@string/setting_call_stop"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/setting_swtich_vibration"
                android:text="@string/setting_vibration"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/layout_boot_script"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/setting_swtich_open_run"
                    android:checked="false"
                    android:text="@string/setting_open_run_script"
                    style="@style/setting_switch"/>
                <View style="@style/setting_splitline"/>
            </LinearLayout>
            <Switch
                android:id="@+id/switch_setting_word_recognition_library"
                android:text="@string/word_recognition_library"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Button
                android:textSize="16sp"
                android:textColor="@color/gray2"
                android:gravity="center"
                android:id="@+id/setting_button_scriptlog"
                android:background="@android:color/transparent"
                android:paddingLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_scriptlog"
                android:drawableRight="@drawable/setting_arrow_right"/>
            <View style="@style/setting_splitline"/>
            <Button
                android:textSize="16sp"
                android:textColor="@color/gray2"
                android:gravity="center"
                android:id="@+id/setting_button_update"
                android:background="@android:color/transparent"
                android:paddingLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_update"/>
            <View style="@style/setting_splitline"/>
            <Button
                android:textSize="16sp"
                android:textColor="@color/gray2"
                android:gravity="center"
                android:id="@+id/setting_button_exitapp"
                android:background="@android:color/transparent"
                android:paddingLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scriptui_exitapp"/>
            <View style="@style/setting_splitline"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
